--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -171,6 +171,7 @@ set(publicHeaders
 
         "threepp/utils/BufferGeometryUtils.hpp"
         "threepp/utils/StringUtils.hpp"
+        "threepp/utils/URLFetcher.hpp"
 
         "threepp/lights/lights.hpp"
         "threepp/lights/Light.hpp"
