--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_subdirectory(Crane3R)
 add_subdirectory(InvertedPendulum)
+add_subdirectory(MapView)
 add_subdirectory(MotorControl)
 add_subdirectory(Pathfinding)
 add_subdirectory(Snake)
