--- a/examples/libs/CMakeLists.txt
+++ b/examples/libs/CMakeLists.txt
@@ -44,6 +44,7 @@ if (CURL_FOUND)
             "${CMAKE_CURRENT_SOURCE_DIR}/geo/geometries/MapNodeGeometry.hpp"
 
             "${CMAKE_CURRENT_SOURCE_DIR}/geo/providers/MapProvider.hpp"
+            "${CMAKE_CURRENT_SOURCE_DIR}/geo/providers/BingMapsProvider.hpp"
             "${CMAKE_CURRENT_SOURCE_DIR}/geo/providers/OpenStreetMapsProvider.hpp"
 
             "${CMAKE_CURRENT_SOURCE_DIR}/geo/utils/UnitUtils.hpp"
