--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_example(NAME "instancing" TRY_LINK_IMGUI WEB WEB_EMBED
+add_example(NAME "instancing" LINK_IMGUI WEB WEB_EMBED
         "../data/fonts@data/fonts"
 )
 if (TARGET "instancing")
@@ -14,8 +14,8 @@ add_example(NAME "points" WEB)
 
 add_example(NAME "bones" LINK_IMGUI)
 add_example(NAME "decal" LINK_IMGUI LINK_ASSIMP)
-add_example(NAME "water" TRY_LINK_IMGUI WEB WEB_EMBED
+add_example(NAME "water" LINK_IMGUI WEB WEB_EMBED
         "../data/textures/waternormals.jpg@data/textures/waternormals.jpg"
 )
 
-add_example(NAME "particle_system" TRY_LINK_IMGUI)
+add_example(NAME "particle_system" LINK_IMGUI)
