--- a/examples/libs/CMakeLists.txt
+++ b/examples/libs/CMakeLists.txt
@@ -31,6 +31,7 @@ target_include_directories(pathfinding INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_library(optimization INTERFACE
         "${CMAKE_CURRENT_SOURCE_DIR}/optimization/DifferentialEvolution.hpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/optimization/ParticleSwarmOptimization.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/optimization/Problem.hpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/optimization/Optimizer.hpp"
 )
