--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(MapView)
 add_subdirectory(MotorControl)
 add_subdirectory(Pathfinding)
 add_subdirectory(Snake)
+add_subdirectory(Optimization)
 add_subdirectory(Youbot)
