--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -5,3 +5,4 @@ add_example(NAME "mouse_key_listener")
 add_example(NAME "clipping" LINK_IMGUI)
 add_example(NAME "morphtargets" LINK_IMGUI)
 add_example(NAME "morphtargets_sphere" LINK_ASSIMP)
+add_example(NAME "multiple_scenes")
