--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -539,7 +539,7 @@ if (THREEPP_TREAT_WARNINGS_AS_ERRORS)
     if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
         target_compile_options(threepp PRIVATE "-Wall" "-Wextra" "-Wpedantic")
         target_compile_options(threepp PRIVATE
-                "-Wno-parentheses" "-Wno-reorder-ctor"
+                "-Wno-parentheses" "-Wno-reorder" "-Wno-reorder-ctor"
                 "-Wno-missing-field-initializers" "-Wno-overloaded-virtual"
                 "-Wno-unused-parameter" "-Wno-dollar-in-identifier-extension")
         target_compile_options(threepp PRIVATE "-Werror")
