--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -10,5 +10,6 @@ add_test_executable(Spherical_test)
 add_test_executable(Ray_test)
 add_test_executable(Vector2_test)
 add_test_executable(Vector3_test)
+add_test_executable(Vector4_test)
 add_test_executable(Matrix4_test)
 add_test_executable(Quaternion_test)
