--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -7,6 +7,7 @@ add_test_executable(Euler_test)
 add_test_executable(Frustum_test)
 add_test_executable(Sphere_test)
 add_test_executable(Spherical_test)
+add_test_executable(Triangle_test)
 add_test_executable(Ray_test)
 add_test_executable(Vector2_test)
 add_test_executable(Vector3_test)
