add Sphero example

--- a/examples/projects/CMakeLists.txt
+++ b/examples/projects/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(InvertedPendulum)
 add_subdirectory(MotorControl)
 add_subdirectory(Pathfinding)
 add_subdirectory(Snake)
+add_subdirectory(SpheroControl)
 add_subdirectory(Optimization)
 add_subdirectory(Youbot)
