Fix embedded glfw on macOS

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -512,6 +512,11 @@ target_compile_features(threepp PUBLIC "cxx_std_20")
 if (UNIX)
     target_link_libraries(threepp PRIVATE pthread dl)
 endif ()
+if (APPLE)
+    target_link_libraries(threepp PRIVATE "-framework IOKit")
+    target_link_libraries(threepp PRIVATE "-framework Cocoa")
+    target_link_libraries(threepp PRIVATE "-framework OpenGL")
+endif ()
 target_include_directories(threepp
         PUBLIC
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>"
