--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_example(NAME "instancing" LINK_IMGUI WEB WEB_EMBED
-        "../data/fonts@data/fonts"
+        "${PROJECT_SOURCE_DIR}/data/fonts@data/fonts"
 )
 if (TARGET "instancing")
     target_include_directories("instancing" PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
@@ -8,14 +8,14 @@ endif ()
 
 add_example(NAME "sprite")
 add_example(NAME "lod" WEBWEB_EMBED
-        "../data/fonts@data/fonts"
+        "${PROJECT_SOURCE_DIR}/data/fonts@data/fonts"
 )
 add_example(NAME "points" WEB)
 
 add_example(NAME "bones" LINK_IMGUI)
 add_example(NAME "decal" LINK_IMGUI LINK_ASSIMP)
 add_example(NAME "water" LINK_IMGUI WEB WEB_EMBED
-        "../data/textures/waternormals.jpg@data/textures/waternormals.jpg"
+        "${PROJECT_SOURCE_DIR}/data/textures/waternormals.jpg@data/textures/waternormals.jpg"
 )
 
 add_example(NAME "particle_system" LINK_IMGUI)
