--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -5,6 +5,7 @@ add_test_executable(Color_test)
 add_test_executable(Cylindrical_test)
 add_test_executable(Euler_test)
 add_test_executable(Frustum_test)
+add_test_executable(MathUtils_test)
 add_test_executable(Sphere_test)
 add_test_executable(Spherical_test)
 add_test_executable(Triangle_test)
