make it possible (again) to skip building example projects

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,4 +21,6 @@ add_subdirectory(objects)
 add_subdirectory(shaders)
 add_subdirectory(textures)
 
-add_subdirectory(projects)
+if (THREEPP_BUILD_EXAMPLE_PROJECTS)
+    add_subdirectory(projects)
+endif ()
