allow cmake to fetch assimp
also remove physx example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,15 @@ option(THREEPP_BUILD_TESTS "Build test suite" ON)
 option(THREEPP_WITH_SVG "Build with SVGLoader" ON)
 option(THREEPP_WITH_AUDIO "Build with Audio" ON)
 option(THREEPP_TREAT_WARNINGS_AS_ERRORS "Treat warnings as errors" OFF)
-option(THREEPP_BUILD_EXAMPLE_PROJECTS "Build example projects" ON)
+
 
 # Force THREEPP_WITH_GLFW ON when targeting Emscripten
 cmake_dependent_option(THREEPP_WITH_GLFW "Build with GLFW frontend" ON "NOT DEFINED EMSCRIPTEN" ON)
 # Force THREEPP_USE_EXTERNAL_GLFW OFF if NOT THREEPP_WITH_GLFW
 cmake_dependent_option(THREEPP_USE_EXTERNAL_GLFW "Use externally supplied GLFW" OFF "THREEPP_WITH_GLFW" OFF)
+
+cmake_dependent_option(THREEPP_BUILD_EXAMPLE_PROJECTS "Build example projects" ON "THREEPP_BUILD_EXAMPLES" OFF)
+cmake_dependent_option(THREEPP_FETCH_ASSIMP "Make assimp available for examples" ON "THREEPP_BUILD_EXAMPLES" OFF)
 
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
@@ -62,6 +65,21 @@ endif ()
 add_subdirectory(src)
 
 if (THREEPP_BUILD_EXAMPLES)
+
+    if (THREEPP_FETCH_ASSIMP)
+        message("Fetching assimp for examples..")
+
+        include(FetchContent)
+        set(ASSIMP_BUILD_TESTS OFF)
+        set(ASSIMP_INSTALL OFF)
+        FetchContent_Declare(
+            assimp
+            GIT_REPOSITORY https://github.com/assimp/assimp.git
+            GIT_TAG v6.0.2
+        )
+        FetchContent_MakeAvailable(assimp)
+    endif ()
+
     add_subdirectory(examples)
 endif ()
 
