--- a/examples/libs/CMakeLists.txt
+++ b/examples/libs/CMakeLists.txt
@@ -22,9 +22,10 @@ add_library(optimization INTERFACE
 )
 target_include_directories(optimization INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_library(bvh
+add_library(bvh OBJECT
         bvh/BVH.hpp
         bvh/BVH.cpp
 )
 target_link_libraries(bvh PUBLIC threepp)
 target_include_directories(bvh PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+set_target_properties(bvh PROPERTIES POSITION_INDEPENDENT_CODE ON)
