--- a/tests/threepp_fetchcontent_test/CMakeLists.txt
+++ b/tests/threepp_fetchcontent_test/CMakeLists.txt
@@ -3,6 +3,8 @@ project(threepp_fetchcontent_demo)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
+
 include(FetchContent)
 
 set(THREEPP_BUILD_TESTS OFF)
@@ -10,21 +12,12 @@ set(THREEPP_BUILD_EXAMPLES OFF)
 FetchContent_Declare(
         threepp
         GIT_REPOSITORY https://github.com/markaren/threepp.git
-        GIT_TAG ddb9941d1de641757152a4070e8bcf78184c6db1
+        GIT_TAG 8c8f1c992dcc63525c9b7f067014f93a2c36cac7
 )
 FetchContent_MakeAvailable(threepp)
 
 add_executable(threepp_demo main.cpp)
 target_link_libraries(threepp_demo PRIVATE threepp::threepp)
-
-# Copy DLL after build (Windows only)
-if (WIN32 AND BUILD_SHARED_LIBS)
-    add_custom_command(TARGET threepp_demo POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            $<TARGET_FILE:threepp::threepp>
-            $<TARGET_FILE_DIR:threepp_demo>
-    )
-endif()
 
 
 ######### Emscripten #######
