--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,6 @@ cmake_dependent_option(THREEPP_USE_EXTERNAL_GLFW "Use externally supplied GLFW" 
 cmake_dependent_option(THREEPP_BUILD_EXAMPLE_PROJECTS "Build example projects" ON "THREEPP_BUILD_EXAMPLES" OFF)
 cmake_dependent_option(THREEPP_FETCH_ASSIMP "Make assimp available for examples" ON "THREEPP_BUILD_EXAMPLES" OFF)
 
-option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
-
 
 # ==============================================================================
 # Global internal configuration
@@ -33,7 +31,7 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 
 # ==============================================================================
@@ -49,10 +47,6 @@ else ()
 
     if (THREEPP_USE_EXTERNAL_GLFW)
         find_package(glfw3 CONFIG REQUIRED)
-
-        if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
-            add_library(glfw::glfw ALIAS glfw)
-        endif ()
     endif ()
 
 endif ()
@@ -99,40 +93,30 @@ endif ()
 
 
 # ==============================================================================
-# Application resources
-# ==============================================================================
-
-if (NOT DEFINED EMSCRIPTEN)
-    # Data files
-    file(COPY "${CMAKE_CURRENT_LIST_DIR}/data/models" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
-    file(COPY "${CMAKE_CURRENT_LIST_DIR}/data/textures" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
-    file(COPY "${CMAKE_CURRENT_LIST_DIR}/data/fonts" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
-    file(COPY "${CMAKE_CURRENT_LIST_DIR}/data/sounds" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/data)
-endif ()
-
-
-# ==============================================================================
 # Exports and remaining installation
 # ==============================================================================
 
 configure_package_config_file(cmake/config.cmake.in
-        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake
-        INSTALL_DESTINATION ${CMAKE_INSTALL_DATADIR}/threepp
+        "${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake"
+        INSTALL_DESTINATION "${CMAKE_INSTALL_DATADIR}/threepp"
         PATH_VARS THREEPP_USE_EXTERNAL_GLFW
         NO_SET_AND_CHECK_MACRO)
 write_basic_package_version_file(
-        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake
+        "${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake"
         VERSION ${CMAKE_PROJECT_VERSION}
         COMPATIBILITY SameMajorVersion)
 install(
         FILES
-        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake
-        ${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake
+        "${CMAKE_CURRENT_BINARY_DIR}/threepp-config.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/threepp-config-version.cmake"
         DESTINATION
-        ${CMAKE_INSTALL_DATADIR}/threepp)
+        "${CMAKE_INSTALL_DATADIR}/threepp")
 
+if (BUILD_SHARED_LIBS AND NOT THREEPP_USE_EXTERNAL_GLFW)
+    install(TARGETS glfw EXPORT threepp-targets)
+endif ()
 install(TARGETS threepp EXPORT threepp-targets)
-install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(DIRECTORY include/ DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 install(EXPORT threepp-targets
         NAMESPACE threepp::
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/threepp)
+        DESTINATION "${CMAKE_INSTALL_DATADIR}/threepp")
