Update points example with adjustable number of (visible) points

--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -10,7 +10,7 @@ add_example(NAME "sprite")
 add_example(NAME "lod" WEBWEB_EMBED
         "${PROJECT_SOURCE_DIR}/data/fonts@data/fonts"
 )
-add_example(NAME "points" WEB)
+add_example(NAME "points" LINK_IMGUI WEB)
 
 add_example(NAME "bones" LINK_IMGUI)
 add_example(NAME "decal" LINK_IMGUI LINK_ASSIMP)
